--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1 data-value="ILOVEYOU">ILOVEYOU</h1>
-<a href="https://google.com"> test</a>
+<a href="https://website4-smoky.vercel.app/"> next step </a>
 
 
 <link rel="stylesheet" href="style.css">
